# p2-raytracer

./: .gitignore  README.md  compile  generate.py  j.json  path-config.txt  periscope.ray  ray-solution  run  sancheck.py
assets/scenes/: cbox.ray
demos/: cbox.ray  simple.ray
old-refs/: raycheck.py
report/: article.tex
report/includes/: colors.tex  figs.tex  hyperlinks.tex  layout.tex  listings.tex  mathstub.tex  separators.tex
src/: CMakeLists.sources  CMakeLists.txt  RayTracer.cpp  RayTracer.h  general.h  main.cpp  mathutil.cpp  mathutil.h  test-intersect.cpp
src/SceneObjects/: Box.cpp  Box.h  Cone.cpp  Cone.h  Cylinder.cpp  Cylinder.h  Sphere.cpp  Sphere.h  Square.cpp  Square.h  trimesh.cpp  trimesh.h
src/fileio/: bitmap.cpp  buffer.cpp  buffer.h  images.cc  pngimage.cpp
src/parser/: Parser.cpp  Parser.h  ParserException.cpp  ParserException.h  Token.cpp  Token.h  Tokenizer.cpp  Tokenizer.h
src/scene/: bbox.cc  bbox.h  camera.cpp  camera.h  config.h  cubeMap.cpp  cubeMap.h  kdTree.h  light.cpp  light.h  material.cpp  material.h  ray.cpp  ray.h  scene.cpp  scene.h
src/ui/: CommandLineUI.cpp  CommandLineUI.h  CubeMapChooser.cxx  CubeMapChooser.h  GraphicalUI.cpp  GraphicalUI.h  ModelerCamera.cpp  ModelerCamera.h  TraceGLWindow.cpp  TraceGLWindow.h  TraceUI.cc  TraceUI.h  debuggingView.cpp  debuggingView.h  debuggingWindow.cxx  debuggingWindow.h  glObjects.cpp
src/win32/: getopt.cpp
